--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node helper for debugging forked processes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/kellyselden/node-debug-helper/issues"
   },
-  "homepage": "https://github.com/kellyselden/node-debug-helper#readme"
+  "homepage": "https://github.com/kellyselden/node-debug-helper#readme",
+  "dependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0"
+  }
 }
