--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node helper for debugging forked processes",
   "main": "src/index.js",
   "scripts": {
-    "test": "eslint-mocha --eslint-args=\"src test\" --mocha-args=\"test/**/*-test.js\"",
+    "test": "mocha test/**/*-test.js",
+    "posttest": "npm run lint",
     "prelint": "eslint --version",
     "lint": "eslint src test",
     "lint:fix": "npm run lint -- --fix"
@@ -35,7 +36,6 @@
     "chai": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-sane": "^0.1.0",
-    "eslint-mocha": "^0.2.2",
     "mocha": "^3.3.0"
   }
 }
