--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ environment:
 branches:
   only:
     - master
+    - /^greenkeeper\/.*$/
 
 # Fix line endings in Windows. (runs before repo cloning)
 init:
