kellyselden/eslint-plugin-prefer-let

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chai": "^4.0.0",
     "eslint": "^4.1.0",
     "eslint-config-sane": "^0.3.0",
-    "eslint-plugin-prefer-let": "^1.0.0",
+    "eslint-plugin-prefer-let": "kellyselden/eslint-plugin-prefer-let",
     "mocha": "^4.0.0"
   }
 }
