--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ branches:
     - master
     - /^greenkeeper\/.*$/
 
+before_install:
+  - npm install -g npm@6
+
 cache:
   directories:
     - $HOME/.npm
